# ChatGPTAppforLinux

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: config.json  index.html  main.ts  privacy.md  snippets.json  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  browser.rs  focus.rs  global_hotkeys.rs  main.rs  paths.rs  quick_prompt.rs  screenshots.rs  tray.rs
src/lib/: hotkeys.ts  storage.ts
static/: index.html  main.js  style.css
