[package]
name = "chatgpt-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = [ "global-shortcut-all", "clipboard-write-text", "window-all", "dialog-message", "custom-protocol", "global-shortcut", "shell-open", "notification-all", "window"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"
tauri-plugin-single-instance = "2.3.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
