[package]
name = "chatgpt-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = [
    "global-shortcut-all",
    "clipboard-write-text",
    "window-all",
    "notification-all",
    "dialog-message",
    "shell-open",
    "custom-protocol"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"
# Use the Tauri 1 compatible version of the single instance plugin.
tauri-plugin-single-instance = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
