[package]
name = "chatgpt-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = [
    "global-shortcut-all",
    "clipboard-write-text",
    "window-all",
    "notification-all",
    "dialog-message",
    "shell-open",
    "custom-protocol"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# Use the latest Tauri-compatible version of the single instance plugin.
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
